--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2672,15 +2672,58 @@ input, select, textarea {
 		}
 
 /* Banner */
+@media screen and (max-width: 767px) {
+    	#banner {
+        background-image: url("../../images/banner.jpg"); 
 
-	#banner {
-		background-image: url("../../images/banner.jpg");
+		
 		background-position: center center;
 		background-size: cover;
 		height: 28em;
 		text-align: center;
 		position: relative;
 	}
+
+}
+@media screen and (min-width: 768px) {
+    	#banner {
+        background-image: url("../../images/banner2.jpg"); 
+
+		
+		background-position: center center;
+		background-size: cover;
+		height: 28em;
+		text-align: center;
+		position: relative;
+	}
+}
+@media screen and (min-width: 992px) {
+    	#banner {
+        background-image: url("../../images/banner3.jpg"); 
+
+		
+		background-position: center center;
+		background-size: cover;
+		height: 28em;
+		text-align: center;
+		position: relative;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+    	#banner {
+        background-image: url("../../images/banner4.jpg"); 
+
+		
+		background-position: center center;
+		background-size: cover;
+		height: 28em;
+		text-align: center;
+		position: relative;
+	}
+}
+
+
 
 		#banner header {
 			position: absolute;
