--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2779,11 +2779,11 @@ input, select, textarea {
 				}
 /* dog */
 		.wrapper.style4 {
-			background-color: #FFFF;
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
-			background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
+			background-color: #dc0303;
+			background-image: -moz-linear-gradient(top, rgba(100,100,50,50), rgba(0,0,0,0.15)), url("images/bg010.png");
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg010.png");
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg010.png");
+			background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg010.png");
 			color: #fff;
 		}
 
@@ -2811,7 +2811,7 @@ input, select, textarea {
 
 	#cta2 {
 		text-align: center;
-		padding: 1.5em 0;
+		padding: 0.5em 0;
 	}
 
 		#cta2 header h2 {
@@ -2948,7 +2948,7 @@ input, select, textarea {
         		/* CTA 2*/
 
 			#cta2 {
-				padding: 2em 0;
+				padding: 0.1em 0;
 			}
 
 		/* Footer */
@@ -3076,7 +3076,7 @@ input, select, textarea {
         		/* CTA2 */
 
 			#cta2 {
-				padding: 0.5em 0;
+				padding: 0.1em 0;
 			}
 
 				#cta2 header h2 {
@@ -3084,7 +3084,7 @@ input, select, textarea {
 				}
 
 				#cta2 header .button {
-					margin: 1em 0 0 0;
+					margin: 0.1em 0 0 0;
 				}
         
 
@@ -3434,7 +3434,7 @@ input, select, textarea {
         		/* CTA2 */
 
 			#cta2 {
-				padding: 10px;
+				padding: 1px;
 			}
 
 		/* Footer */
@@ -3466,11 +3466,11 @@ img {vertical-align: middle;}
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3x 0;
   user-select: none;
 }
 
